# hut23-linear-algebra

./: .gitignore  .gitmodules  README.md  all-the-maths-we-know.tex  toy-applications.md
.github/workflows/: pdflatex.yml
applications/: polynomial-example.rkt  toys.scrbl
exercises/: Makefile  axler-1a.md  axler-1a.tex  axler-1b.md  axler-1c.md  axler-2a.md  axler-2c.md  axler-3a.md  axler-3b.md  axler-3d.md  axler-3e.md  axler-3f.md  axler-5a.md  axler-5a.org  axler-5c.md  axler-6a.md
implementation/: README.md  results.csv
implementation/matmul-asm/: Makefile
implementation/matmul-c/: Makefile  main.c
implementation/matmul-cpp-mkl/: Makefile  main.cpp
implementation/matmul-julia/: Manifest.toml  Project.toml  README.md  matmul.jl  plots.jl  utils.jl
implementation/matmul-opencl/: Makefile  sqr.cl  test.c
implementation/matmul-python/: matmul.py
implementation/matmul-r/: matmul.R
implementation/matmul-racket/: load.rkt  matmul.rkt  matrix-flo.rkt  matrix-naive-cons-loop.rkt  matrix-naive-cons.rkt  matrix-naive.rkt  matrix-unsafe.rkt
implementation/matmul-rst-hackweek/: Cargo.toml
implementation/matmul-rst-hackweek/src/: lib.rs  load.rs  main.rs
implementation/testdata/: matrices.npz  matrix-a.npy  matrix-b.npy  (+1 more)
meetups/: 2023-10-06.md  2023-10-13.md  2023-10-20.md  2024-05-17.md
notes/: Makefile  bilinear-form.asy  bilinear-form2.asy  constrained-min.asy  evalmap-in.asy  evalmap-lin.asy  evalmap.asy  mml.tex  optimisation.tex  quadr.asy  vs-bijection.tex
reference/: Makefile  all-the-maths-we-know.tex  all-the-rules-we-know.tex
(+45 files in other folders)
