[package]
name = "matrix_library_hackweek"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3

[dependencies]
npyz = "0.8.3"
float-cmp = "0.9.0"
zip = "0.6.6"
itertools = "0.12.1"
anyhow = "1.0.86"
num = "0.4.3"
thiserror = "1.0.61"
